// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CarouselButton should match the next button snapshot 1`] = `
<div>
  <button
    class="bg-accent-500 disabled:bg-accent-700 hover:bg-accent-300 px-4 py-12 text-background transition-colors"
  >
    <svg
      aria-hidden="true"
      class="svg-inline--fa fa-chevron-right "
      data-icon="chevron-right"
      data-prefix="fas"
      focusable="false"
      role="img"
      viewBox="0 0 320 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M310.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-192 192c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L242.7 256 73.4 86.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l192 192z"
        fill="currentColor"
      />
    </svg>
    <span
      class="absolute border-0 h-px m-0 overflow-hidden p-0 w-px whitespace-nowrap"
    >
      Next image
    </span>
  </button>
</div>
`;

exports[`CarouselButton should match the previous button snapshot 1`] = `
<div>
  <button
    class="bg-accent-500 disabled:bg-accent-700 hover:bg-accent-300 px-4 py-12 text-background transition-colors"
  >
    <svg
      aria-hidden="true"
      class="svg-inline--fa fa-chevron-left "
      data-icon="chevron-left"
      data-prefix="fas"
      focusable="false"
      role="img"
      viewBox="0 0 320 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M9.4 233.4c-12.5 12.5-12.5 32.8 0 45.3l192 192c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L77.3 256 246.6 86.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0l-192 192z"
        fill="currentColor"
      />
    </svg>
    <span
      class="absolute border-0 h-px m-0 overflow-hidden p-0 w-px whitespace-nowrap"
    >
      Previous image
    </span>
  </button>
</div>
`;
